<resources>
    <string name="app_name">Diplom_AVERIN</string>
    <string name="message_to_back">Нажмите кнопку назад для возврата к камере</string>
    <string name="linear_regression">Линейная регрессия</string>
    <string name="perceptron">Перцептрон</string>
    <string name="mlp_classifier">Многослойный перцептрон</string>
    <string name="mlp_regressor">MLP_Regressor</string>
    <string name="custom_network">Кастомная нейронная сеть</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="method_ml">Метод анализа</string>
    <string name="default_sensitivity">50</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="settings_of_sensitivity">Настройка чувствительности (0-100)</string>
    <string name="fbLib">FbProphet</string>
    <string name="wait">Подождите, идёт обработка сервером...</string>
</resources>
